packages/otupy/otupy-1.1.12.tar.gz/otupy-1.1.12/validation/openc2-cbor-samples/tests/commands/bad/args_empty.cbor
£factiongcontainftarget¡fdevice¡idevice_idx 9BCE8431AC106FAA3861C7E771D20E53dargs 